%% hybraut_models.core
%% A UML Class Diagram for the Hybraut Model
%% a key module of the hybraut_ros2 project

classDiagram
    direction TB

    %% Reference to WrapperInterface from component_interfaces package
    class component_interfaces.WrapperInterface

    class Mode {
        - _id: int
        - _name: str
        - _description: str
        - _dynamics_ref: str
        - _invariant_refs: List[str]
        - _transition_refs: Dict[int, str]
        - _is_goal_mode: Optional[bool]
        - _entry_actions: Optional[List[Callable[['Mode', EvaluationContext], None]]]
        - _exit_actions: Optional[List[Callable[['Mode', EvaluationContext], None]]]

        + get_id() int
        + get_name() str
        + get_description() str
        + get_entry_actions() List[Callable[['Mode', EvaluationContext], None]]
        + get_exit_actions() List[Callable[['Mode', EvaluationContext], None]]
        + get_is_goal_mode() Optional[bool]
        + get_dynamics_ref() str
        + get_transition_refs() List[str]
        + get_transition_refs_and_priorities() Dict[str, Transition]
        + get_invariant_refs() List[str]
        + on_enter(ctx: EvaluationContext)
        + on_exit(ctx: EvaluationContext)
        + __repr__() str
        + __str__() str
    }

    class State {
        - _name: str
        - _topic: str
        - _msg_type: Type
        - _update_hz: Optional[int]
        - _timeout_sec: Optional[float]
        - _max_errors: int
        - _current_state: Any
        - _error_count: int
        - _last_update: float

        + get_name() str
        + get_topic() str
        + get_msg_type() Type
        + get_update_hz() int
        + get_timeout_sec() float
        + get_max_errors() int
        + get_current_state() Any
        + get_error_count() int
        + get_current_state_age() int
        + update_state(current_state: Any)
        + reset_error_count() None
        + increment_error_count() None
        + get_info() Dict[str, Any]
        + __str__() str
        + __repr__() str
    }

    class GuardWrapper {
        - component_class: Type[GuardInterface]
        - name: List[str]
        - configuration: Any
        - is_initialized: bool
        - component_instance: GuardInterface

        + __post_init_hook__() None
        + get_guard_name() List[str]
        + get_initialization_configuration_names_and_types() Dict[str, Type]
        + get_state_configuration_names_and_types() Dict[str, Type]
        + get_initialization_configuration() Any
        + _evaluate(context: EvaluationContext) GuardEvaluationMSG
        + __str__() str
        + __repr__() str
    }

    GuardWrapper <|-- component_interfaces.WrapperInterface

    class Transition {
        - _name: str
        - _target_mode: int
        - _guard_refs: List[str]
        - _reset_refs: List[str]
        - _priority: int
        - _urgency: Optional[UrgencyEnums]
        - _metadata: Optional[Dict[str, Any]]

        + get_name() str
        + get_target_mode() int
        + get_guard_refs() List[str]
        + get_reset_refs() List[str]
        + get_urgency() Optional[UrgencyEnums]
        + get_metadata() Optional[Dict[str, Any]]
        + evaluate_transition(ctx: EvaluationContext) TransitionEvaluationMSG
        + __repr__() str
        + __str__() str
    }

    class InvariantWrapper {
        - component_class: Type[InvariantInterface]
        - name: str
        - configuration: Any
        - is_initialized: bool
        - component_instance: InvariantInterface

        + __post_init_hook__() None
        + get_invariant_name() str
        + get_initialization_configuration_names_and_types() Dict[str, Type]
        + get_state_configuration_names_and_types() Dict[str, Type]
        + get_initialization_configuration() Any
        + _evaluate(context: EvaluationContext) InvariantEvaluationMSG
        + __str__() str
        + __repr__() str
    }

    InvariantWrapper <|-- component_interfaces.WrapperInterface

    class DynamicsWrapper {
        - _output_topic: str
        - _output_msg_type: Type
        - component_class: Type[DynamicsInterface]
        - is_initialized: bool
        - component_instance: DynamicsInterface

        + __post_init_hook__() None
        + get_dynamic_name() str
        + get_output_topic() str
        + get_output_msg_type() Type
        + get_initialization_configuration_names_and_types() Dict[str, Type]
        + get_state_configuration_names_and_types() Dict[str, Type]
        + get_initialization_configuration() Any
        + _evaluate(ctx: EvaluationContext) Tuple[Any, AutomatonDynamicsEvaluation]
        + __str__() str
        + __repr__() str
    }

    DynamicsWrapper <|-- component_interfaces.WrapperInterface